Add biplov's repository 	modified:   .gitmodules 	new file:   biplov

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "daniyal"]
 	path = daniyal
 	url = https://github.com/Dphilomath/Lowes-LEAP-Codes
+[submodule "biplov"]
+	path = biplov
+	url = https://github.com/pbplop29/LowesLeap
