Add submodule for shilpa and sneha 	modified:   .gitmodules 	new file:   shilpa 	new file:   sneha

--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,9 @@
 [submodule "shalini"]
 	path = shalini
 	url = https://github.com/shalinishygan/Lowe-s-bootcamp
+[submodule "sneha"]
+	path = sneha
+	url = https://github.com/snehareddy24/Lowes-training
+[submodule "shilpa"]
+	path = shilpa
+	url = https://github.com/Shilpa2507/lowes-leap
